--- a/styles.css
+++ b/styles.css
@@ -3,35 +3,37 @@
 }
 
 body {
-  height: 100%;
-  position: absolute;
+  height: 100vh;
 }
 
 .carousel {
   height: 100%;
   width: 100%;
-  position: fixed;
 }
 
 .current {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   height: 70%;
   width: 50%;
-  margin-top: 15rem;
-  margin-left: 40rem;
-  background-color: rgb(84, 84, 84);
-  background-image: url("images/image1.jpg");
+  margin-top: 1rem;
+  margin-left: 1rem;
+  background-image: url('images/image1.jpg');
   background-position: center;
+  background-size: cover;
 }
 
 .title {
   font-style: italic;
   text-align: center;
-  height: 20%;
   color: rgb(245, 245, 245);
+  text-shadow: 2px 2px 3px black;
 }
 
 .sentence {
-  height: 10%;
   text-align: center;
   color: rgb(245, 245, 245);
+  text-shadow: 2px 2px 3px black;
 }
